WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268745
REGRESSION(
267824@main
): Changing HTMLCanvasElement width, height causes intermediate buffer allocations
https://bugs.webkit.org/show_bug.cgi?id=268745
Summary
REGRESSION(267824@main): Changing HTMLCanvasElement width, height causes inte...
Kimmo Kinnunen
Reported
2024-02-05 07:00:28 PST
Changing HTMLCanvasElement width, height causes intermediate buffer allocations
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-05 07:01:02 PST
<
rdar://problem/122309325
>
Kimmo Kinnunen
Comment 2
2024-02-05 08:47:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23861
EWS
Comment 3
2024-02-05 23:35:31 PST
Committed
274135@main
(26aaa25dcbdc): <
https://commits.webkit.org/274135@main
> Reviewed commits have been landed. Closing PR #23861 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug